tests/compile_errors/bad-pattern.buzz
// Could not compile pattern
import "buzz:std";

test "bad pattern" {
    final bad = $"bad\pattern";
}
